--- a/business-casual.css
+++ b/business-casual.css
@@ -4,6 +4,7 @@
  * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-business-casual/blob/master/LICENSE)
  */
 /*Put a stock photo or product photo in the body background image*/
+
 body {
   font-family: "Lora";
   background-image: url("hand.jpg")
@@ -16,7 +17,9 @@ body {
   background-position: center;
   background-size: cover;
 }
-
+.kh {
+  width: 50px;
+}
 h1,
 h2,
 h3,
@@ -76,7 +79,7 @@ p {
 .section-heading .section-heading-lower {
   display: block;
   font-size: 3rem;
-  font-weight: 100;
+  font-weight: 800;
 }
 
 /*.bg-faded {
@@ -93,15 +96,15 @@ p {
 }
 
 #mainNav .navbar-nav .nav-item .nav-link {
-  color: rgba(255, 255, 255, 0.7);
+  color: palevioletred;
   font-weight: 800;
 }
 
 #mainNav .navbar-nav .nav-item.active .nav-link {
-  color: #e6a756;
+  color: palevioletred;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 992) {
   #mainNav .navbar-nav .nav-item .nav-link {
     font-size: 0.9rem;
   }
@@ -109,7 +112,7 @@ p {
     color: rgba(255, 255, 255, 0.4);
   }
   #mainNav .navbar-nav .nav-item.active .nav-link:hover {
-    color: #e6a756;
+    color: darkorchid;
   }
 }
 
@@ -127,7 +130,7 @@ p {
   color: blueviolet;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 2000px) {
   .intro .intro-img {
     width: 75%;
     float: right;
@@ -146,7 +149,7 @@ p {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1201px) {
   .intro .intro-text {
     width: 45%;
   }
@@ -177,7 +180,7 @@ p {
   z-index: -1;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .about-heading .about-heading-img {
     position: relative;
     z-index: 0;
@@ -189,7 +192,7 @@ p {
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .product-item .product-item-title {
     position: relative;
     z-index: 1;
@@ -224,7 +227,7 @@ p {
   color: #e6a756;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .list-hours {
     width: 50%;
     font-size: 1.1rem;
