--- a/business-casual.css
+++ b/business-casual.css
@@ -80,12 +80,17 @@ p {
 .section-heading {
   text-transform: uppercase;
   color: blueviolet;
+  color: blueviolet;
+  font-family: "lora";
+  background-color: lavenderblush;
+  opacity: .7;
 }
 
 .section-heading .section-heading-upper {
   display: block;
   font-size: 1rem;
   font-weight: 800;
+  
 }
 
 .section-heading .section-heading-lower {
